# redis-sre-agent

./: .dockerignore  .env.airgap.example  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .rakignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_README.md  Dockerfile  Dockerfile.airgap  Dockerfile.rar  KNOWN_ISSUES.md  LICENSE.txt  Makefile  PROMETHEUS_PROVIDER_SUMMARY.md  README.md  REDIS_DOCS_LOCAL_SCRAPING.md  REDIS_ENTERPRISE_PROVIDER_SUMMARY.md  REDIS_ENTERPRISE_SETUP.md  SETUP.md  TASK_MEMORY.md  UI_SETUP.md  check_latest_threads.py  check_recent_threads.py  comprehensive_testing_summary.md  config.airgap.yaml  config.runtime.yaml  config.yaml  config.yaml.example  debug_scheduler.py  demo_redis_kb_scraper.py  demo_redis_memory_scenario.py  docker-compose.airgap.yml  docker-compose.enterprise.yml  docker-compose.integration.yml  docker-compose.prod.yml  docker-compose.test.yml  (+24 more)
.ai/: phase-two-hitl-rollout-notes.md
docs/: demo-guide.md  docker-publish.md  encryption.md  index.md  llms.txt  pre-commit-setup.md  production-deployment.md  prometheus-metric-search.md  prometheus-provider-setup.md  protocol-tools.md  redis-enterprise-testing.md  runbook-generator.md  thread-based-api.md  tools.md  ui-websocket-testing.md  websocket-task-monitoring.md
eval_reports/: redis_enterprise_llm_judge_20251017_151802.json  redis_enterprise_llm_judge_20251017_154715.json  retrieval_evaluation_report.md
evals/: baseline_policy.yaml
examples/: custom_provider_setup.py  demo_redis_memory_scenario.py  demo_scenarios.py  generate_connection_runbooks.py  integrated_ingestion_approach.md  llm_metric_search_workflow.py  prometheus_provider_demo.py  search_metrics.py  test_metric_search.py  test_redis_metrics.py  verify_prometheus_integration.py  websocket_client.py
monitoring/: prometheus.yml  redis-low-memory.conf  redis.conf
redis_sre_agent/: __init__.py  cli.py  worker.py
scripts/: benchmark_cache.sh  build-airgap.sh  capture_redis_diagnostics.py  cleanup.sh  create_deliberate_shard_imbalance.sh  create_local_crdb.sh  docker-entrypoint.sh  fix_masked_instance_urls.py  generate-mcp-certs.sh  generate_redis_cloud_client.py  generate_reference_docs.py  generate_runbooks.py  migrate_encrypt_secrets.py  migrate_instances_to_clusters.py  migrate_instances_to_index_storage.py  openapi_python_client_config.json  quick-setup.sh  repro_cluster_id_routing.sh  run_live_eval_suite.py  setup-knowledge.sh  setup.sh  setup_redis_docs_local.sh  setup_redis_enterprise.sh  setup_redis_enterprise_cluster.sh  trigger_rebalance.sh  validate.sh
skills/: README.md
source_documents/: .gitignore  README.md
specs/: agent-skills-protocol-support-spec.md  eval-fixture-layout-contract.md  eval-fixture-layout-spec.md  eval-fixture-layout.md  formal-skills-protocol-support-spec.md  hitl-approvals-and-resume-spec.md  knowledge-pack-release-spec.md  late-discovery-default-migration-spec.md  manual-qa-0.4.0.md  mocked-agent-eval-fixture-layout-contract.md  mocked-agent-eval-system-spec.md  natural-language-target-discovery-spec.md  phase-two-hitl-approvals-spec.md  pii-remediation-hook-spec.md  (+2 more)
src/: index.ts
(+1559 files in other folders)
